# psychic-eureka

./: .gitignore  CHANGELOG.md  Makefile  cabal.project.freeze  hie.yaml  psychic-eureka.cabal
app/: Main.hs
src/: Caching.hs  Description.hs  Entities.hs  EntityService.hs  Persist.hs  PsychicEureka.hs  SwaggerService.hs  Util.hs
src/PsychicEureka/: Biz.hs  Cache.hs  Entity.hs  Error.hs  Service.hs  Swagger.hs  Util.hs
src/PsychicEureka/Biz/: Common.hs  ManyToMany.hs  OneToMany.hs
src/PsychicEureka/Internal/: Util.hs
src/PsychicEureka/Swagger/: Description.hs  Gen.hs  Schema.hs  TypeF.hs
test/: CleanTestData.hs  M2M.hs  O2M.hs  RandUuid.hs  SwaggerTags.hs  UserServer.hs
