cabal-version:   3.0
name:            psychic-eureka
version:         0.1.0.0

-- synopsis:
-- description:
license:         BSD-3-Clause
license-file:    LICENSE
author:          jacob
maintainer:      jacobbishopxy@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   src
  exposed-modules:
    Description
    Entities
    EntityService
    Persist
    SwaggerService

  build-depends:
    , aeson
    , aeson-pretty
    , base                     ^>=4.19.1.0
    , bytestring
    , directory
    , http-types
    , lens
    , mtl
    , process
    , servant
    , servant-docs
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , servant-swagger-ui-core
    , swagger2
    , text
    , time
    , wai
    , warp

  default-language: Haskell2010

executable psychic-eureka
  import:           warnings
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base            ^>=4.19.1.0
    , psychic-eureka

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite test-rand-uuid
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          RandUuid.hs
  build-depends:    base
